--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,24 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Add path to ImGui Submodule
-set(IMGUI_DIR ${CMAKE_SOURCE_DIR}/external/imgui)
-
-# ImGui source files
-set(IMGUI_SOURCES
-    ${IMGUI_DIR}/imgui.cpp
-    ${IMGUI_DIR}/imgui_draw.cpp
-    ${IMGUI_DIR}/imgui_demo.cpp
-    ${IMGUI_DIR}/imgui_widgets.cpp
-    ${IMGUI_DIR}/imgui_tables.cpp
-    ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
-    ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
-)
-
-# Create imgui library
-add_library(imgui STATIC ${IMGUI_SOURCES})
-target_include_directories(imgui PUBLIC ${IMGUI_DIR} ${IMGUI_DIR}/backends)
-# TODO - Link opengl to the imgui library
+# TODO - Fetch ImGui
 
 # TODO - Find package openGL
 
@@ -35,4 +18,3 @@ add_subdirectory(include)
 add_subdirectory(src)
 target_link_libraries(${PROJECT_NAME} include)
 target_link_libraries(${PROJECT_NAME} src)
-target_link_libraries(${PROJECT_NAME} imgui)
