Add imgui sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,28 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # TODO - Fetch ImGui
 include(FetchContent)
 
+# Fetch ImGui and make availble
+FetchContent_Declare(
+    imgui
+    GIT_REPOSITORY https://github.com/ocornut/imgui
+    GIT_TAG v1.91.8-docking
+)
+FetchContent_MakeAvailable(imgui)
+
+# Set ImGui_dir
+set(IMGUI_DIR ${CMAKE_BINARY_DIR}/_deps/imgui-src)
+
+# ImGui source files
+set(IMGUI_SOURCES
+    ${IMGUI_DIR}/imgui.cpp
+    ${IMGUI_DIR}/imgui_draw.cpp
+    ${IMGUI_DIR}/imgui_demo.cpp
+    ${IMGUI_DIR}/imgui_widgets.cpp
+    ${IMGUI_DIR}/imgui_tables.cpp
+    ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
+    ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
+)
+
 # TODO - Find package openGL
 
 # Executable
