Create Window class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,8 @@ set(Sources
         # Sources
         "MilkyWay.cpp"
         "SolarSystem.cpp"
-        "GUI.cpp"
+        "GUI.cpp" # TODO: Remove
+        "Window.cpp"
         #".cpp"
 )
 
