Pull changes from main

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(Sources
         # Sources
-        "MilkyWay.cpp"
+        "CelestialBody.cpp"
+        "main.cpp"
         "SolarSystem.cpp"
+        "Window.cpp"
         #".cpp"
 )
 
