--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,35 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# TODO - Fetch ImGui
+# Fetch raylib
+include(FetchContent)
+set(FETCHCONTENT_QUIET FALSE)
+set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
+set(BUILD_GAMES    OFF CACHE BOOL "" FORCE) # don't build the supplied example games
+FetchContent_Declare(
+    raylib
+    GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+    GIT_TAG "master"
+    GIT_PROGRESS TRUE
+)
+FetchContent_MakeAvailable(raylib)
 
-# TODO - Find package openGL
+# make target - 'run' - compiles and runs the produced binary
+add_custom_target(run
+    COMMAND ${CMAKE_BINARY_DIR}/${PROJECT_NAME}
+    DEPENDS ${PROJECT_NAME}
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
 
 # Executable
-add_executable(${PROJECT_NAME} "src/SolarSystem.cpp")
+add_executable(${PROJECT_NAME} "src/main.cpp")
 
 # Dirs
 add_subdirectory(include)
 add_subdirectory(src)
-target_link_libraries(${PROJECT_NAME} include)
-target_link_libraries(${PROJECT_NAME} src)
+target_link_libraries(${PROJECT_NAME} PRIVATE include)
+target_link_libraries(${PROJECT_NAME} PRIVATE src)
+
+# Link raylib library
+target_link_libraries(src PRIVATE raylib)
+target_link_libraries(include INTERFACE raylib)
