--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     branches:
-      - Actions
+      - '**' # Triggers the workflow on any branch
 
 jobs:
   build:
