--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,6 @@ jobs:
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
+        if: github.ref_type == 'tag'
         with:
           files: build/Debug/SolarSystem.exe, build/Debug/SolarSystem.pdb
