--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: github.ref_type == 'tag'
         with:
-          files: build/Debug/SolarSystem.exe, build/Debug/SolarSystem.pdb
+          files: build/Debug/Solar-System.exe, build/Debug/Solar-System.pdb
