--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,10 @@ jobs:
         run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64
 
       - name: Build
-        run: cmake --build build --config Debug
+        run: cmake --build build --config Release
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         if: github.ref_type == 'tag'
         with:
-          files: build/Debug/Solar-System.exe, build/Debug/Solar-System.pdb
+          files: build/Release/Solar-System.exe, resources
