--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,10 @@ name: Build and Release
 permissions:
   contents: write
 
-on: push
+on: 
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -27,10 +30,10 @@ jobs:
         run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64
 
       - name: Build
-        run: cmake --build build --config Release
+        run: cmake --build build --config Debug
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         if: github.ref_type == 'tag'
         with:
-          files: build/Release/Solar-System.exe, resources
+          files: build/Debug/Solar-System.exe, build/Debug/Solar-System.pdb
