--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build and Release
 
-on:
+permissions:
+  contents: write
+
+on: 
   push:
     branches:
       - main
@@ -11,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v2
@@ -30,10 +33,7 @@ jobs:
         run: cmake --build build --config Debug
 
       - name: Create Release
-        id: create_release
         uses: softprops/action-gh-release@v1
+        if: github.ref_type == 'tag'
         with:
-          tag_name: ${{ github.ref }}
-          files: build/Debug/SolarSystem.exe, build/Debug/SolarSystem.pdb
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          files: build/Debug/Solar-System.exe, build/Debug/Solar-System.pdb
