--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(Sources
         # Sources
         "CelestialBody.cpp"
+        "Simulation.cpp"
         "main.cpp"
         "SolarSystem.cpp"
         "Window.cpp"
