Add input system and UI

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(Includes
         # Headers
         "CelestialBody.h"
+        "Input.h"
         "Simulation.h"
         "SolarSystem.h"
+        "UI.h"
         "Window.h"
         #".h"
 )
